--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "15.1.0"
+    "lucide-react": "^0.556.0",
+    "next": "^15.5.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.22",
     "eslint": "^8",
-    "eslint-config-next": "15.1.0"
+    "eslint-config-next": "^15.5.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
